issues with CI problems fiexed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
-
-
 name: C++ CI
 
 on:
     push:
-        branches: ["main"]
-        pull_request:
-            branches: ["main"]
+        branches: 
+            - main
+    pull_request:
+            branches: 
+                - main
 
 
 jobs:
@@ -14,22 +14,23 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            -name: Check out repository
-            uses: actions/checkout@v3
+            - name: Check out repository
+              uses: actions/checkout@v3
 
-            -name: Install dependencies
-            run: sudo apt-get update
-                 sudo apt-get install -y g++ cmake
+            - name: Install dependencies
+              run: 
+                sudo apt-get update
+                sudo apt-get install -y g++ cmake
 
-            -name: Configure CMake
-            run: cmake -B build -S .-DCMAKE_CXX_STANDARD=17
+            - name: Configure CMake
+              run: cmake -B build -S .-DCMAKE_CXX_STANDARD=17
 
 
-            -name: Build
-            run: cmake --build build
+            - name: Build
+              run: cmake --build build
 
-            -name: Run tests
-            run: cd build ctest --verbose
+            - name: Run tests
+              run: cd build ctest --verbose
 
 
 
