--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Install dependencies
-              run: 
+              run: |
                 sudo apt update
                 sudo apt install -y g++ cmake
 
