issues with CI problems fixed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Install dependencies
               run: |
                 sudo apt update
-                sudo apt install -y g++ cmake
+                sudo apt install -y
 
             - name: Configure CMake
               run: cmake -B build -S .-DCMAKE_CXX_STANDARD=17
