issues with CI problems fixed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,20 @@ jobs:
             - name: Install dependencies
               run: |
                 sudo apt update
-                sudo apt install -y
+                sudo apt install -y g++ cmake
 
             - name: Configure CMake
-              run: cmake -B build -S .-DCMAKE_CXX_STANDARD=17
+              run: |
+                cmake -B build -S .-DCMAKE_CXX_STANDARD=17
 
 
             - name: Build
-              run: cmake --build build
+              run: |
+                cmake --build build
 
             - name: Run tests
-              run: cd build ctest --verbose
+              run: |
+                cd build ctest --verbose
 
 
 
