issues with CI problems fixed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
             - name: Configure CMake
               run: |
-                cmake -B build -S .-DCMAKE_CXX_STANDARD=17
+                cmake -B build -S .-CMAKE_CXX_STANDARD=17
 
 
             - name: Build
