issues with CI problems fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB_RECURSE GAME_SOURCES "src/*.cpp")
 file(GLOB_RECURSE GAME_HEADERS "include/*.hpp")
 
-add_library(CardGameLib${GAME_SOURCES}${GAME_HEADERS})
+add_library(Card_Game${GAME_SOURCES}${GAME_HEADERS})
 
 target_include_directories(CardGameLib PUBLIC include)
 
