issues with CI problems fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 file(GLOB_RECURSE GAME_SOURCES "src/*.cpp")
-file(GLOB_RECURSE GAME_HEADERS "include/*.hpp")
+file(GLOB_RECURSE GAME_HEADERS "include/CardGme/*.hpp")
 
-add_library(CardGameLib${GAME_SOURCES})
+add_library(CardGameLib${GAME_SOURCES}${GAME_HEADERS})
 
 target_include_directories(CardGameLib PUBLIC include)
 
