--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.31)
 
 cmake_policy(SET CMP0048 NEW)
 
-project(CardGame VERSION 1.0 LANGUAGES CXX)
+project(Card_Game VERSION 1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
