issues with CI problems fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.31)
 
 cmake_policy(SET CMP0048 NEW)
 
-project(Card_Game VERSION 1.0 LANGUAGES CXX)
+project(CardGame VERSION 1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -13,7 +13,7 @@ include_directories(include)
 file(GLOB_RECURSE GAME_SOURCES "src/*.cpp")
 #file(GLOB_RECURSE GAME_HEADERS "include/CardGme/*.hpp")
 
-add_library(CardGameLib${GAME_SOURCES})
+add_library(CardGameLib$ {GAME_SOURCES})
 
 target_include_directories(CardGameLib PUBLIC include)
 
