--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
             - name: Run tests
               run: |
-                cd build ctest --verbose
+                cd build && ctest --verbose
 
 
 
