--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include_directories(include)
 
 file(GLOB_RECURSE GAME_SOURCES "src/*.cpp")
-#file(GLOB_RECURSE GAME_HEADERS "include/CardGme/*.hpp")
+file(GLOB_RECURSE GAME_HEADERS "include/CardGme/*.hpp")
 
-add_library(CardGameLib ${GAME_SOURCES})
+add_library(CardGameLib ${GAME_SOURCES} ${GAME_HEADERS})
 
 target_include_directories(CardGameLib PUBLIC include)
 
