--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: C++ CI
 
 on:
@@ -9,7 +8,6 @@ on:
         branches: 
             - main
 
-
 jobs:
     build-and-test:
         runs-on: ubuntu-latest
@@ -19,19 +17,19 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Install dependencies
-              run: 
-                sudo apt-get update
-                sudo apt-get install -y g++ cmake
+              run: |
+                sudo apt update
+                sudo apt install -y g++ cmake
 
             - name: Configure CMake
-              run: cmake -B build -S .-DCMAKE_CXX_STANDARD=17
+              run: |
+                cmake -B build -S . -DCMAKE_CXX_STANDARD=17
 
 
             - name: Build
-              run: cmake --build build
+              run: |
+                cmake --build build
 
             - name: Run tests
-              run: cd build ctest --verbose
-
-
-
+              run: |
+                cd build && ctest --verbose
